# agentic-chat

./: .gitignore  CLAUDE.md  Caddyfile.example  Dockerfile  QUICKSTART.md  README.md  agent.py  pyproject.toml  relay.config.json  relay.py  requirements.txt  test_e2e.py
deploy/: gcp-deploy.sh
docs/: compatibility.md  design-session.md  notifications.md  product-strategy.md  setup.md
scripts/: check-relay.sh  setup-hooks.sh
src/agentic_chat/: __init__.py  auth.py  channels.py  cleanup.py  cli.py  config.py  dashboard.py  db.py  server.py  tools.py
static/: dashboard.html  join.html
systemd/: claude-relay.service
tests/: conftest.py  test_auth.py  test_concurrency_stress.py  test_db.py  test_edge_cases.py  test_http_integration.py  test_integration.py  test_security_adversarial.py  test_tools.py
